# qgis_simple_overpass

./: AGENTS.md  README.md  pyproject.toml
.prompts/: A.A_Clear_the_pointer.md  A.B_Sort_by_bb.md  A_Initialization.md  __plan.md
.prompts/B_tasks/: B_port_to_qgis_4.md
simple_overpass/: __init__.py  metadata.txt  osm_elements.py  query_builder.py  results_dock.py  settings.py  simple_overpass.py  simple_overpass_tool.py  worker.py
tests/: test_query_builder.py
