[project]
name = "qgis-simple-overpass"
version = "0.1.0"
description = "QGIS plugin to query the Overpass API"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
